syntax = "proto3";

option csharp_namespace = "Tradie.Analyzer.Proto";

message AffixRange {
    int64 hash = 1;

}
